@@ -51,7 +51,7 @@ gdb_continue_to_breakpoint "marker1" ".*/$srcfile:.*"
 
 gdb_test "watch ival3" \
     ".*\[Ww\]atchpoint $decimal: ival3.*" \
-    "set watchpoknt on ival3"
+    "set watchpoint on ival3"
 
 # Continue until first change, from -1 to 0
 
